--- a/style.css
+++ b/style.css
@@ -78,6 +78,10 @@ img{
   margin-bottom: var(--mb-4);
   text-align: center;
 }
+.section-description{
+  font-weight: bold;
+  color: var(--first-color);
+}
 .section-title::after{
   position: absolute;
   content: "";
